assets/css/styles.css
/* ... */
.table tfoot .footer {
  background-color: #e5e6ec;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dee3e7), color-stop(100%, #f5f6f7));
  background: -webkit-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
  background: -moz-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
  background: -ms-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
  background: -o-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
  background: linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffdee3e7', endColorstr='#fff5f6f7', GradientType=0 );
  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
  -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.15);
  -moz-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.15);
}

.table tfoot .footer th {
  height: 40px;
  line-height: 40px;
  font-weight: normal;
}

.table tfoot .footer .helper {
  padding-left: 3px;
  height: 40px;
  line-height: 40px;
  vertical-align: middle;
}

.table tfoot .footer .pagination {
  margin: 0px;
  padding-right: 3px;
  height: 40px;
  line-height: 40px;
}

.table tfoot .footer a { font-size: 13px; }

.table tfoot .footer input {
  font-size: 13px;
  width: 40px;
}

.table tr th.align-right,
.table tr td.align-right { text-align: right; }

.table tr td .large { font-size: 19px; }
.table tr td .medium { font-size: 14px; font-weight: bold; }
.table tr td .small { font-size: 12px; }


/********************************/
/* LIST PAGES
/********************************/

.list-search-bar {
  padding-bottom: 15px;
}




/********************************/
/* STOCKS, HOLDINGS SHOW PAGE
/********************************/

.stock-header {
  margin-bottom: 20px;
}

.stock-header-row-1 { padding-bottom: 5px; }
.stock-header-row-2 {}

.stock-name {
  font-size: 25px;
  font-weight: bold;
}

.stock-symbol {
  font-weight: bold;
}
.stock-current-price { font-size: 20px; font-weight: bold; }
.stock-currency { font-weight: bold; }
.stock-change
.stock-change-price {  }
.stock-change-percent {}


/********************************/
/* AUTHENTICATION (SIGN IN, SIGN OUT)
/********************************/

.authentication .auth-container {
  margin: 70px auto;
  width: 350px;
}

.authentication .auth-container h1 {
  margin: 0px;
  padding: 0px;
  font-size: 32px;
  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}

.widget-auth {
  margin-bottom: 20px;
  border-radius: 5px;
  color: #333333;
  padding: 15px;
  background-color: #f4f4f5; /* f6f7ff */
  border: 1px solid #ffffff;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
}

.widget-auth h3 {
  margin: 0px 0px 15px 0px;
  padding: 0px;
}

.widget-auth ul {
  margin: 0px 0px 10px 0px;
  padding: 0px;
  list-style-type: none;
}

.widget-auth ul li input {
  margin-bottom: 0;
  background-color: rgba(128, 128, 128, 0.2);
  height: 18px;
  padding: 10px 6px;
  font-size: 16px;
  font-weight: 400;
  line-height: 18px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
}

.widget-auth ul li:first-child input {
  border-top-color: #a8aBBa;
  border-bottom: none;
  border-radius: 5px 5px 0 0;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
}

.widget-auth ul li:last-child input {
  border: 1px solid #c5c7d2;
  border-radius: 0 0 5px 5px;
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), -2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.4) inset;
}

.widget-auth ul li input:focus { border: 1px solid #c5c7d2; }

.widget-auth ul li:first-child input:focus {
  border-top-color: #a8abba;
  border-bottom: none;
}

.widget-auth ul li input.input-block-level { height: 40px; }

.widget-auth .remember-me label {
  padding-bottom: 10px;
  float: left;
  height: 28px;
  line-height: 28px;
  vertical-align: middle;
}

.widget-auth .remember-me input {
  width: 20px;
  vertical-align: middle;
}

.widget-auth .btn-custom {
  margin: 0px;
  padding: 0px;
  color: #ffffff;
  height: 38px;
  line-height: 38px;
  font-weight: bold;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.35);
  border-radius: 5px;
  background-color: hsl(90, 82%, 20%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5ba710", endColorstr="#335c09");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#5ba710), to(#335c09));
  background-image: -moz-linear-gradient(top, #5ba710, #335c09);
  background-image: -ms-linear-gradient(top, #5ba710, #335c09);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5ba710), color-stop(100%, #335c09));
  background-image: -webkit-linear-gradient(top, #5ba710, #335c09);
  background-image: -o-linear-gradient(top, #5ba710, #335c09);
  background-image: linear-gradient(#5ba710, #335c09);
  border-color: #335c09 #335c09 hsl(90, 82%, 16%);
  -webkit-font-smoothing: antialiased;
}


/********************************/
/* TWITTER TYPEAHEAD (stocks)
/********************************/

.twitter-typeahead,
.twitter-typeahead .tt-query,
.twitter-typeahead .tt-hint {
  margin-right: 15px;
  width: 520px;
  height: 34px;
  line-height: 34px;
  font-size: 17.5px;
}

.twitter-typeahead:focus { border: 1px solid #0097cf; }

.twitter-typeahead .tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.twitter-typeahead .tt-hint { color: #000444; }

.twitter-typeahead .tt-dropdown-menu {
  width: 532px;
  margin-top: 15px;
  padding: 8px 0;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
          box-shadow: 0 5px 10px rgba(0,0,0,.2);
}
/* ... */

